--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.6.0",
     "react-router-dom": "^6.22.3",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "react-virtualized": "^9.22.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -33,6 +34,7 @@
     "terser": "^5.28.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "workbox-window": "^7.0.0"
   }
 }
