--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.6.0",
     "react-router-dom": "^6.22.3",
-    "react-type-animation": "^3.2.0",
-    "react-virtualized": "^9.22.5"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
