--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
-    "gsap": "^3.12.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.6.0",
     "react-router-dom": "^6.22.3",
-    "react-type-animation": "^3.2.0",
-    "three": "^0.162.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@types/three": "^0.162.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
