--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
@@ -16,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.6.0",
     "react-router-dom": "^6.22.3",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "web-vitals": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
