--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "lightningcss": "^1.25.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "terser": "^5.28.1",
